# real-time-audio-scope

./: CMakeLists.txt
include/spring/Application/: ApplicationModel.h  BaseScene.h  InitialScene.h  MonoInput.h
include/spring/Framework/: Application.h  IApplicationModel.h  IScene.h  SceneMachine.h
script/: CMakeClean.bat  CMakeGener.bat  CMakeReGen.bat  IsCMakeOutputFolder.bat
src/spring/Application/: ApplicationModel.cpp  BaseScene.cpp  CMakeLists.txt  InitialScene.cpp  MonoInput.cpp
src/spring/Framework/: Application.cpp  CMakeLists.txt  SceneMachine.cpp
src/spring/Loader/: CMakeLists.txt  main.cpp
